Refactor argument list handling in Main.java for improved readability